--- a/build_spec.yaml
+++ b/build_spec.yaml
@@ -8,3 +8,7 @@ steps:
     name: "Build app"
     command: |
       echo "Hello from here"
+outputArtifacts:
+  - name: node-app-deployment.yml
+    type: BINARY
+    location: node-app-deployment.yml:1
